# doc-gpt

./: README.md  package-lock.json  package.json  start_services.sh
.github/workflows/: build.yml
backend/: main.py  pyproject.toml
backend/app/: __init__.py  config.py  models.py
backend/app/routers/: chat.py  documents.py  models.py  settings.py
backend/app/services/: chunker.py  converter_worker.py  docling_service.py  embedder.py  rag.py  sparse_encoder.py  vector_store.py
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/lib/api/: backend.ts
src/lib/components/: ChatWindow.svelte  GpuSettings.svelte  ImportProgress.svelte  MessageBubble.svelte  ModelSelector.svelte  SettingsPanel.svelte  Sidebar.svelte  SystemPromptEditor.svelte  Toast.svelte
src/lib/stores/: chat.ts  documents.ts  gpu.ts  settings.ts  systemPrompt.ts  theme.ts  toast.ts
src/routes/: +page.svelte
