[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.66.0",
    "fastapi>=0.135.1",
    "ollama>=0.6.1",
    "python-multipart>=0.0.22",
    "qdrant-client[local]>=1.17.1",
    "sse-starlette>=3.3.3",
    "uvicorn[standard]>=0.42.0",
]
